# warp-react-template

./: .dockerignore  .editorconfig  .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: client.yml  server.yml
app/: README.md  package-lock.json  package.json
app/src/: App.js  App.test.js  graphql.js  index.js  setupProxy.js
app/src/components/: Humans.js
migrations/: 20201002061901_create_human_table.sql
scripts/: run_dev.sh  run_prod.sh
src/: graphql.rs  main.rs  routes.rs
