[package]
name = "server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.35"
dotenv = "0.15.0"
hyper = "0.13.9"
async-graphql = "2.1.8"
async-graphql-warp = "2.1.8"
listenfd = "0.3.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
sqlx = { version = "0.4.1", features = ["runtime-tokio-native-tls", "offline", "postgres", "uuid"] }
tokio = { version = "0.2.24", features = ["full"] }
tracing-subscriber = "0.2.15"
uuid = { version = "0.8.1", features = ["v4"] }
warp = "0.2.5"
